@@ -30,7 +30,7 @@ include_once 'functions.php';
 if (!$CONFIG_disable_account) {
 ?>
 <span title="Create a new account" style="cursor:pointer" onMouseOver="this.style.color='#FF3300'" onMouseOut="this.style.color='#000000'" onClick="return LINK_ajax('account.php','main_div');">
-<b><? echo $lang['NEW_ACCOUNT']?></b>
+<b><?php echo $lang['NEW_ACCOUNT'] ?></b>
 </span>
 <?php
 }
@@ -40,7 +40,7 @@ if (!$CONFIG_disable_account) {
 if ($CONFIG_password_recover) {
 ?>
 <span title="Send to your e-mail the account info" style="cursor:pointer" onMouseOver="this.style.color='#FF3300'" onMouseOut="this.style.color='#000000'" onClick="return LINK_ajax('recover.php','main_div');">
-<b><? echo $lang['RECOVER_PASSWORD']?></b>
+<b><?php echo $lang['RECOVER_PASSWORD'] ?></b>
 </span>
 <?php
 }
